# katcbf-vlbi-resample

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile.jenkins  Jenkinsfile  LICENSE  pyproject.toml  requirements.txt
doc/: changelog.rst  conf.py  design.rst  index.rst  introduction.rst  katcbf_vlbi_resample.cupy_bridge.rst  katcbf_vlbi_resample.hdf5_reader.rst  katcbf_vlbi_resample.mk.rst  katcbf_vlbi_resample.parameters.rst  katcbf_vlbi_resample.polarisation.rst  katcbf_vlbi_resample.power.rst  katcbf_vlbi_resample.rechunk.rst  katcbf_vlbi_resample.resample.rst  katcbf_vlbi_resample.rst  katcbf_vlbi_resample.stream.rst  katcbf_vlbi_resample.utils.rst  katcbf_vlbi_resample.vdif_writer.rst  katcbf_vlbi_resample.xrsig.rst  modules.rst
src/katcbf_vlbi_resample/: cupy_bridge.py  hdf5_reader.py  mk.py  parameters.py  polarisation.py  power.py  rechunk.py  resample.py  stream.py  utils.py  vdif_writer.py  xrsig.py
test/: __init__.py  conftest.py  test_cupy_bridge.py  test_polarisation.py  test_power.py  test_rechunk.py  test_resample.py  test_utils.py  test_vdif_writer.py
