################################################################################
# Copyright (c) 2024-2025, National Research Foundation (SARAO)
#
# Licensed under the BSD 3-Clause License (the "License"); you may not use
# this file except in compliance with the License. You may obtain a copy
# of the License at
#
#   https://opensource.org/licenses/BSD-3-Clause
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
################################################################################

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "katcbf_vlbi_resample"
description = "Proof-of-concept of resampling tied-array-channelised-voltages for VLBI"
requires-python = ">=3.12"
dependencies = [
    "astropy",
    "atomicwrites",
    "baseband",
    "cupy>=13.3.0",  # Older versions have issues with numpy 2
    "h5py",
    "katsdptelstate[rdb]",
    "numpy",
    "platformdirs",
    "rich",
    "scipy",
    "xarray",
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-custom-exit-code",
]
doc = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.scripts]
"mk_vlbi_resample" = "katcbf_vlbi_resample.mk:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
[tool.ruff.lint]
extend-select = ["D", "W"]
extend-ignore = ["D105", "D107"]  # magic methods
exclude = ["doc/conf.py"]
[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
files = ["src", "test"]
ignore_missing_imports = true
